--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Names</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+   <!--<link rel="icon" type="image/x-icon" href="Maps/old-map-world-map-published-1894-24348367.jpg.webp">-->
+</head>
+<body>
+    <h1 id="hi">WHYYYYY</h1>
+    <script src="script.js"></script>
+</body>
+</html>
