--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
    <!--<link rel="icon" type="image/x-icon" href="Maps/old-map-world-map-published-1894-24348367.jpg.webp">-->
 </head>
 <body>
-    <h1 id="hi">WHYYYYY</h1>
+    <div id="main">
+        <h1>Name Popularity</h1>
+        <span class="sdivider"></span>
+        <h4>A Visual Essay by <a>Wystan</a></h4>
+        <span class="divider"></span>
+        <h2>Intro</h2>
+        <br>
+        <p>Have you ever wondered what the most popular baby names are, or how they have been changed and impacted throught the years? In this essay/data analaysis we will attempt to answer these questions and more. Hopefully this can give you a better idea of what baby name trends are and some examples.</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
