--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div id="main">
         <h1>Name Popularity</h1>
-        <span class="sdivider"></span>
+        <div class="sdivider"></div>
         <h4>A Visual Essay by <a>Wystan</a></h4>
-        <span class="divider"></span>
+        <div class="divider"></div>
         <h2>Intro</h2>
         <br>
         <p>Have you ever wondered what the most popular baby names are, or how they have been changed and impacted throught the years? In this essay/data analaysis we will attempt to answer these questions and more. Hopefully this can give you a better idea of what baby name trends are and some examples.</p>
