--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="main">
         <h1>Name Popularity</h1>
-        <div class="sdivider"></div>
+        <div class="divider"></div>
         <h4>A Visual Essay by <a>Wystan</a></h4>
         <div class="divider"></div>
         <h2>Intro</h2>
