--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <h1>Name Popularity</h1>
         <div class="divider"></div>
         <h4>A Visual Essay by <a>Wystan</a></h4>
-        <div class="divider"></div>
-        <h2>Intro</h2>
         <br>
-        <p>Have you ever wondered what the most popular baby names are, or how they have been changed and impacted throught the years? In this essay/data analaysis we will attempt to answer these questions and more. Hopefully this can give you a better idea of what baby name trends are and some examples.</p>
+        <br>
+        <br>
+        <h2>Intro</h2>
+        <div class="divider"></div>
+        <p class="inp">Have you ever wondered what the most popular baby names are, or how they have been changed and impacted throught the years? In this essay/data analaysis we will attempt to answer these questions and more. Hopefully this can give you a better idea of what baby name trends are and some examples.</p>
     </div>
     <script src="script.js"></script>
 </body>
