--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
         <h2>Intro</h2>
         <div class="divider"></div>
         <p class="inp">Have you ever wondered what the most popular baby names are, or how they have been changed and impacted throught the years? In this essay/data analaysis we will attempt to answer these questions and more. Hopefully this can give you a better idea of what baby name trends are and some examples.</p>
+        <br>
+        <br>
+        <br>
+        <h2>Divercity</h2>
+        <div class="divider"></div>
+        <p>By analyzing the top 1000 baby names (of each gender) we can count them all and compare it to the total amount of babies born we can get the percentage of names in the top 1000 most common names. This lets us see how the concentration of names in the most popular names.</p>
+        <br>
+        <div style="border:solid black 3px;">
+            <h4>Interactive</h4>
+            <p>Top <span id="perc">1000</span> Names </p>
+            <input type="range" min="5" max="1000" value="1000" id="num">
+        </div>
+
     </div>
     <script src="script.js"></script>
 </body>
